plugins {
    id 'fabric-loom' version '1.17.12'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url = "https://maven.shedaniel.me/" }
    maven { url = "https://maven.terraformersmc.com/releases/" }
    maven { url = "https://jitpack.io" }
    mavenCentral()
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Fabric API.
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation "com.terraformersmc:modmenu:11.0.4"
    implementation "com.google.code.findbugs:jsr305:3.0.2"

    modApi("me.shedaniel.cloth:cloth-config-fabric:15.0.140") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    testImplementation "org.junit.jupiter:junit-jupiter:5.10.2"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

test {
    useJUnitPlatform()
}

tasks.register('benchScheduler', JavaExec) {
    group = 'verification'
    description = 'Runs the scheduler micro-benchmark (SchedulerBench)'
    dependsOn 'testClasses'
    classpath = sourceSets.test.runtimeClasspath
    mainClass = 'com.synsenetwork.vanadium.bench.SchedulerBench'
    jvmArgs = ['-XX:+UseParallelGC']
}

loom {
    accessWidenerPath = file("src/main/resources/vanadium.accesswidener")
}

def archiveBaseName = project.archives_base_name

jar {
    from("LICENSE") {
        rename { "${it}_${archiveBaseName}" }
    }
}
